objects/APTS_SSD_Abreviation__mdt.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>Abbreviation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                    <default>true</default>
                    <label>Address</label>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Address &amp; Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>More_than_a_word__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More than a word</label>
        <type>Checkbox</type>
    </fields>
    <label>APTS SSD Abreviation</label>
    <pluralLabel>APTS SSD Abreviations</pluralLabel>
</CustomObject>